initial web commit

--- a/activehoneypot_web/web/top.html
+++ b/activehoneypot_web/web/top.html
@@ -1,5 +1,5 @@
 <div id="titleNav">
-    <div class="logo"><img src="pics/templelogo3.png"></div>
+    <div class="logo"><img src="pics/templelogo.png"></div>
     <div id="title">
         Active Honeypot
     </div>
