added ability to search for log files via location

--- a/activehoneypot_web/web/top.html
+++ b/activehoneypot_web/web/top.html
@@ -5,9 +5,9 @@
     </div>
     <div id="nav">
         <div class="navLink"><a href="index.html">Home</a></div>
-        <div class="navLink"><a href="">Recent Attacks</a></div>
+        <div class="navLink"><a href="search.html">Search logs</a></div>
         <div class="navLink"><a href="">Data Breakdown</a></div>
-        <div class="navLink"><a href="">Search logs</a></div>
+        <div class="navLink"><a href="">Admin Console</a></div>
     </div>
     <div style="clear:both"></div>
 </div>
