increased search functionality to include country/state/city/ip

--- a/activehoneypot_web/web/data.html
+++ b/activehoneypot_web/web/data.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>ActiveHoneypot</title>
+        <title>Admin Console</title>
         <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
         <link href="myStyle.css" rel="stylesheet" type="text/css" />
     </head>
@@ -8,7 +8,7 @@
         <div ng-include src="'top.html'"> </div>
 
         <div id="content" style="margin:12px">
-            <h1>Login Page</h1>
+            <h1>Data Analysis Breakdown</h1>
             
 
         </div>
