added login page

--- a/activehoneypot_web/web/data.html
+++ b/activehoneypot_web/web/data.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Admin Console</title>
+        <title>Data Analysis</title>
         <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
         <link href="myStyle.css" rel="stylesheet" type="text/css" />
     </head>
@@ -9,9 +9,8 @@
 
         <div id="content" style="margin:12px">
             <h1>Data Analysis Breakdown</h1>
-            
+
 
         </div>
-        <div ng-include src="'bottom.html'"></div>
     </body>
 </html>
