--- a/activehoneypot_web/web/top.html
+++ b/activehoneypot_web/web/top.html
@@ -4,10 +4,10 @@
         Active Honeypot
     </div>
     <div id="nav">
-        <div class="navLink"><a href="index.html">Home</a></div>
         <div class="navLink"><a href="search.html">Search logs</a></div>
         <div class="navLink"><a href="data.html">Data Analysis</a></div>
         <div class="navLink"><a href="console.html">Admin Console</a></div>
+        <div class="navLink"><a href="index.html">Log out</a></div>
     </div>
     <div style="clear:both"></div>
 </div>
