added webGL Globe

--- a/activehoneypot_web/web/data.html
+++ b/activehoneypot_web/web/data.html
@@ -51,7 +51,7 @@
 
             <div id="graphs">
                 <select id="selectBox" onchange="ajaxGetData()">
-                    <option value="">Search</option>
+                    <option value="">Search Option</option>
                     <option value="country">Locations Accessed</option>
                     <option value="time_of_day_accessed">Times Accessed</option>
                     <option value="date_accessed">Days of the Week Accessed</option>
