--- a/activehoneypot_web/web/top.html
+++ b/activehoneypot_web/web/top.html
@@ -6,7 +6,8 @@
     <div id="nav">
         <div class="navLink"><a href="search.html">Search logs</a></div>
         <div class="navLink"><a href="data.html">Data Analysis</a></div>
-        <div class="navLink"><a href="console.html">Admin Console</a></div>
+        <div class="navLink"><a href="graphs.html">Graphs</a></div>
+        <div class="navLink"><a href="webglobe.html">WebGL Globe</a></div>
         <div class="navLink"><a href="index.html">Log out</a></div>
     </div>
     <div style="clear:both"></div>
