--- a/activehoneypot_web/web/graphs.html
+++ b/activehoneypot_web/web/graphs.html
@@ -50,7 +50,7 @@
             <h1>Graphs</h1>
 
             <div id="graphs">
-                <select id="selectBox" onchange="generateGraphs()">
+                <select id="selectBox" onchange="canGenerateGraphs()">
                     <option value="Select Option">Select Option</option>
                     <option value="username_freq">Username (frequency)</option>
                     <option value="user_pass_scatter">Usernames vs. Passwords</option>
@@ -58,8 +58,8 @@
                     <option value="password_freq">Passwords Used (frequency)</option>
                     <option value="time_access">Time Accessed (series)</option>
                 </select>
-                <div id="displayGraphs" style="background-color:white; margin:12px; width:35%; height:75%">
-                    <canvas id="myChart" width="400" height="400"></canvas>
+                <div id="displayGraphs" style="background-color:white; margin:12px; width:600px; height:600px">
+                    <canvas id="myChart" width="900" height="900"></canvas>
                 </div>
             </div>
         </div>
@@ -129,25 +129,43 @@
                         }
                         data_list = transformData(obj.recordList);
                     }
+                    
+                    function canGenerateGraphs(){
+                        if (typeof (data_list) === 'undefined') {
+                            console.log("Waiting for data to finish");
+                            setTimeout(canGenerateGraphs, 3000);
+                        }
+                        else{
+                            generateGraphs();
+                        }
+                    }
 
-
+                    var chartObj;
                     function generateGraphs() {
                         console.log(data_list);
+                        Chart.defaults.global.responsive = false;
+
                         var ctx = document.getElementById("myChart").getContext('2d');
-                        var chartObj;
+                        ctx.canvas.width = 600;
+                        ctx.canvas.height = 600;
+
+
+
                         if ($("selectBox").value == new String("username_freq")) {
                             variable_arrays = find_variable_frequency(data_list, 2);
-                            if (chartObj != undefined || chartObj != null) {
+
+                            if (chartObj) {
+                                console.log("chart destroyed");
                                 chartObj.destroy();
                             }
 
-                            var chartObj = new Chart(ctx, {
+                            chartObj = new Chart(ctx, {
                                 type: 'bar',
                                 data: {
                                     labels: variable_arrays[0],
                                     datasets: [{
                                             data: variable_arrays[1],
-                                            backgroundColor: 'rgba(255, 99, 132, 0.2)',
+                                            backgroundColor: 'rgba(255, 99, 132, 0.3)',
                                             borderColor: 'rgba(255,99,132,1)',
                                             borderWidth: 1
                                         }]
@@ -170,6 +188,9 @@
                                                     display: true,
                                                     labelString: "Usernames",
                                                     fontColor: "black"
+                                                },
+                                                ticks: {
+                                                    autoSkip: false
                                                 }
                                             }],
                                         yAxes: [{
@@ -192,24 +213,26 @@
                         } else if ($("selectBox").value == new String("user_pass_scatter")) {
                             username_password_organize();
 
-                            if (chartObj != undefined || chartObj != null) {
+                            if (chartObj) {
+                                console.log("chart destroyed");
                                 chartObj.destroy();
                             }
 
                         } else if ($("selectBox").value == new String("ip_address_freq")) {
                             variable_arrays = find_variable_frequency(data_list, 1);
 
-                            if (chartObj != undefined || chartObj != null) {
+                            if (chartObj) {
+                                console.log("chart destroyed");
                                 chartObj.destroy();
                             }
 
-                            var chartObj = new Chart(ctx, {
+                            chartObj = new Chart(ctx, {
                                 type: 'pie',
                                 data: {
                                     labels: variable_arrays[0],
                                     datasets: [{
                                             data: variable_arrays[1],
-                                            backgroundColor: 'rgba(255, 99, 132, 0.2)',
+                                            backgroundColor: 'rgba(255, 99, 132, 0.3)',
                                             borderColor: 'rgba(255,99,132,1)',
                                             borderWidth: 1
                                         }]
@@ -224,17 +247,18 @@
 
                         } else if ($("selectBox").value == new String("password_freq")) {
                             variable_arrays = find_password_frequency(data_list);
-                            if (chartObj != undefined || chartObj != null) {
+                            if (chartObj) {
+                                console.log("chart destroyed");
                                 chartObj.destroy();
                             }
 
-                            var chartObj = new Chart(ctx, {
+                            chartObj = new Chart(ctx, {
                                 type: 'bar',
                                 data: {
                                     labels: variable_arrays[0],
                                     datasets: [{
                                             data: variable_arrays[1],
-                                            backgroundColor: 'rgba(255, 99, 132, 0.2)',
+                                            backgroundColor: 'rgba(255, 99, 132, 0.3)',
                                             borderColor: 'rgba(255,99,132,1)',
                                             borderWidth: 1
                                         }]
@@ -257,6 +281,9 @@
                                                     display: true,
                                                     labelString: "Passwords",
                                                     fontColor: "black"
+                                                }, 
+                                                ticks: {
+                                                    autoSkip: false
                                                 }
                                             }],
                                         yAxes: [{
@@ -277,15 +304,20 @@
                             });
 
                         } else if ($("selectBox").value == new String("time_access")) {
-                            organize_time_data();
+                            variable_arrays = organize_hour_data(data_list);
 
-                            var chartObj = new Chart(ctx, {
+                            if (chartObj) {
+                                console.log("chart destroyed");
+                                chartObj.destroy();
+                            }
+
+                            chartObj = new Chart(ctx, {
                                 type: 'polarArea',
                                 data: {
-                                    labels: hour,
+                                    labels: variable_arrays[0],
                                     datasets: [{
-                                            data: sessionCounter,
-                                            backgroundColor: 'rgba(255, 99, 132, 0.2)',
+                                            data: variable_arrays[1],
+                                            backgroundColor: 'rgba(255, 99, 132, 0.3)',
                                             borderColor: 'rgba(255,99,132,1)',
                                             borderWidth: 1
                                         }]
@@ -305,126 +337,6 @@
                         }
 
                     }
-//
-//                    var password_list = [];
-//                    var password_count = [];
-//
-//                    //Count the password frequency
-//                    function find_password_frequency() {
-//                        password_list = [];
-//                        password_count = [];
-//                        for (var i = 0; i < data_transformed.length; i++) {
-//                            var ps = data_transformed[i][3].split(" ");
-//
-//                            for (var j = 0; j < ps.length; j++) {
-//                                var index = password_list.indexOf(ps[j]);
-//                                if (index === -1) {
-//                                    password_list.push(ps[j]);
-//                                    password_count.push(1);
-//                                    console.log("Added password: " + ps[j] + " to the password_list");
-//                                } else {
-//                                    password_count[index] += 1;
-//                                    console.log("Increased password " + ps[j] + " to " + password_count[index] + " in password_count");
-//                                }
-//                            }
-//                        }
-//                        console.log("click to see 'password_list' below.");
-//                        console.log(password_list);
-//                        console.log("click to see 'password_count' below.");
-//                        console.log(password_count);
-//                    }
-//
-//                    var username_list = [];
-//                    var username_count = [];
-//                    //Count the username frequency
-//                    function find_username_frequency() {
-//                        username_list = [];
-//                        username_count = [];
-//                        for (var i = 0; i < data_transformed.length; i++) {
-//                            var name = data_transformed[i][2];
-//                            var index = username_list.indexOf(name);
-//                            if (index === -1) {
-//                                username_list.push(name);
-//                                username_count.push(1);
-//                                console.log("Added name: " + name + " to the username_list");
-//                            } else {
-//                                username_count[index] += 1;
-//                                console.log("Increased username " + name + " to " + username_count[index] + " in username_count");
-//                            }
-//                        }
-//                        console.log("click to see 'username_list' below.");
-//                        console.log(username_list);
-//                        console.log("click to see 'username_count' below.");
-//                        console.log(username_count);
-//
-//                    }
-//
-//                    var ip_address_list = [];
-//                    var ip_address_count = [];
-//                    //Count the ip address frequency
-//                    function ip_address_frequency() {
-//                        ip_address_list = [];
-//                        ip_address_count = [];
-//                        for (var i = 0; i < data_transformed.length; i++) {
-//                            var ip_address = data_transformed[i][1];
-//                            var index = ip_address_list.indexOf(ip_address);
-//                            if (index === -1) {
-//                                ip_address_list.push(ip_address);
-//                                ip_address_count.push(1);
-//
-//                                console.log("Added ip address: " + ip_address + " to the ip_address_list");
-//                            } else {
-//                                ip_address_count[index] += 1;
-//                                console.log("Increased ip address " + ip_address + " to " + ip_address_count[index] + " in ip_address_count");
-//                            }
-//                        }
-//                        console.log("click to see 'ip_address_list' below.");
-//                        console.log(ip_address_list);
-//                        console.log("click to see 'ip_address_count' below.");
-//                        console.log(ip_address_count);
-//                    }
-//
-//                    var username_point = [];
-//                    var password_point = [];
-//                    //Create the arrays needed for a username vs. password scatter plot
-//                    function username_password_organize() {
-//                        username_point = [];
-//                        password_point = [];
-//                        var j = 0;
-//                        for (var i = 0; i < data_transformed.length; i++) {
-//                            var ps = data_transformed[i][3].split(" ");
-//
-//                            for (var k = 0; k < ps.length; k++) {
-//                                username_point[j] = data_transformed[i][2];
-//                                password_point[j] = ps[k];
-//                                j++;
-//                            }
-//                        }
-//                        console.log("click to see 'username_points' below.");
-//                        console.log(username_point);
-//                        console.log("click to see 'password_points' below.");
-//                        console.log(password_point);
-//                    }
-//
-//                    var hour = [];
-//                    var sessionCounter = [];
-//                    function organize_time_data() {
-//                        hour = Array.from({length: 24}, (x, i) => i);
-//                        sessionCounter = new Array(24).fill(0);
-//
-//                        for (var i = 0; i < data_transformed.length; i++) {
-//                            var timeString = data_transformed[i][4].substr(0, 2);
-//                            var timeInt = parseInt(timeString);
-//
-//                            sessionCounter[timeInt] += 1;
-//
-//                        }
-//                        console.log("click to see 'hour' below.");
-//                        console.log(hour);
-//                        console.log("click to see 'sessionCounter' below.");
-//                        console.log(sessionCounter);
-//                    }
-//
 
                     var randomColorPlugin = {
 
