--- a/activehoneypot_web/web/graphs.html
+++ b/activehoneypot_web/web/graphs.html
@@ -53,7 +53,7 @@
                 <select id="selectBox" onchange="canGenerateGraphs()">
                     <option value="Select Option">Select Option</option>
                     <option value="username_freq">Username (frequency)</option>
-                    <option value="user_pass_scatter">Usernames vs. Passwords</option>
+                    <option value="user_pass_mix">Usernames vs. Passwords</option>
                     <option value="ip_address_freq">IP Addresses (frequency)</option>
                     <option value="password_freq">Passwords Used (frequency)</option>
                     <option value="time_access">Time Accessed (series)</option>
@@ -129,13 +129,12 @@
                         }
                         data_list = transformData(obj.recordList);
                     }
-                    
-                    function canGenerateGraphs(){
+
+                    function canGenerateGraphs() {
                         if (typeof (data_list) === 'undefined') {
                             console.log("Waiting for data to finish");
                             setTimeout(canGenerateGraphs, 3000);
-                        }
-                        else{
+                        } else {
                             generateGraphs();
                         }
                     }
@@ -210,13 +209,83 @@
                                 }
                             });
 
-                        } else if ($("selectBox").value == new String("user_pass_scatter")) {
-                            username_password_organize();
+                        } else if ($("selectBox").value == new String("user_pass_mix")) {
+                            variable_arrays = find_variable_frequency(data_list, 2);
+                            var password_arrays = find_password_frequency(data_list);
+
+                            var max_username_index = variable_arrays[1].indexOf(Math.max(variable_arrays[1]));
+                            console.log("Max_username_index is: " + max_username_index);
+
+                            console.log("Password_arrays[1]");
+                            console.log(password_arrays[1]);
+                            var username_count = generate_username_password_data(data_list, variable_arrays[0][max_username_index], password_arrays[0]);
 
                             if (chartObj) {
                                 console.log("chart destroyed");
                                 chartObj.destroy();
                             }
+
+                            chartObj = new Chart(ctx, {
+                                type: 'bar',
+                                data: {
+                                    labels: password_arrays[0],
+                                    datasets: [{
+                                            type: 'bar',
+                                            data: password_arrays[1],
+                                            backgroundColor: 'blue',
+                                            borderColor: 'rgba(255,99,132,1)',
+                                            borderWidth: 1
+                                        },
+                                        {
+                                            type: 'line',
+                                            data: username_count,
+                                            borderColor: 'black',
+                                            borderWidth: 2,
+                                            fill: false
+                                        }]
+                                },
+                                options: {
+                                    tooltips:{
+                                        intersect: true
+                                    },
+                                    legend: {
+                                        display: false
+                                    },
+                                    title: {
+                                        display: true,
+                                        text: 'Frequency of Username \'' + variable_arrays[0][max_username_index] + '\' vs. Passwords',
+                                        color: "black"
+                                    },
+                                    scales: {
+                                        xAxes: [{
+                                                gridlines: {
+                                                    color: "black"
+                                                },
+                                                scaleLabel: {
+                                                    display: true,
+                                                    labelString: "Passwords",
+                                                    fontColor: "black"
+                                                },
+                                                ticks: {
+                                                    autoSkip: false
+                                                }
+                                            }],
+                                        yAxes: [{
+                                                gridlines: {
+                                                    color: "black"
+                                                },
+                                                scaleLabel: {
+                                                    display: true,
+                                                    labelString: "Frequency",
+                                                    fontColor: "black"
+                                                },
+                                                ticks: {
+                                                    beginAtZero: true
+                                                }
+                                            }]
+                                    }
+                                }
+                            });
 
                         } else if ($("selectBox").value == new String("ip_address_freq")) {
                             variable_arrays = find_variable_frequency(data_list, 1);
@@ -238,9 +307,12 @@
                                         }]
                                 },
                                 options: {
+                                    legend: {
+                                        position: 'right'
+                                    },
                                     title: {
                                         display: true,
-                                        text: 'Frequency of Ip Addresses'
+                                        text: 'Frequency of IP Addresses'
                                     }
                                 }
                             });
@@ -281,7 +353,7 @@
                                                     display: true,
                                                     labelString: "Passwords",
                                                     fontColor: "black"
-                                                }, 
+                                                },
                                                 ticks: {
                                                     autoSkip: false
                                                 }
@@ -336,6 +408,27 @@
                             });
                         }
 
+                    }
+
+                    function generate_username_password_data(list, name, password_list) {
+                        var username_count = new Array(password_list.length).fill(0);
+                        for (var i = 0; i < list.length; i++) {
+                            if (!(list[i][3] === "") && !(list[i][2] === "")) {
+                                if (list[i][2] === name) {
+                                    var ps = list[i][3].split(" ");
+                                    for (var j = 0; j < ps.length; j++) {
+                                        var index = password_list.indexOf(ps[j]);
+
+                                        username_count[index] += 1;
+                                    }
+                                }
+                            }
+                        }
+                        console.log("Username compared to passwords is: " + name);
+                        console.log("click to see username_count");
+                        console.log(username_count);
+
+                        return username_count;
                     }
 
                     var randomColorPlugin = {
